Bug fix
fixed bug for not showing default message for enter and basementKey not being set to true when calling drawer

--- a/style.css
+++ b/style.css
@@ -67,3 +67,7 @@
   #me{
     color:rgb(160, 200, 0)
   }
+
+  #crash{
+    width: auto;
+  }
